Allow the configuration to be updated

--- a/json/config.json
+++ b/json/config.json
@@ -1,6 +1,6 @@
 {
-  "name": "AppConfigCLI",
-  "version": "1.0.0",
+  "name": "bob",
+  "version": "1.12.0",
   "description": "The Command Line Interface (CLI) for the MyApp.",
   "main": "myapp.js",
   "superuser": "adm1n",
